@@ -6,5 +6,7 @@ includedir=@includedir@
 Name: Xcomposite
 Description: X Composite  Library
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @XCOMPOSITE_CFLAGS@
-Libs: -L${libdir} -lXcomposite @XCOMPOSITE_LIBS@
+Requires: xproto compositeproto >= @COMPOSITEEXT_VERSION@ xfixes
+Requires.private: x11 xfixes xext
+Cflags: -I${includedir}
+Libs: -L${libdir} -lXcomposite
